Final commit of the night. Still having vertical stretch issues on mobile.

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ nav ul li a {
 }
 
 .menu-section-div img {
-    max-width: 50%;
+    max-width: 45%;
     padding: 0;
     margin: 0;
     margin-left: auto;
